parser as python file + uploading files to s3

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,9 @@ chromadb = "*"
 sentence-transformers = "*"
 instructorembedding = "*"
 scikit-learn = "*"
+matplotlib = "*"
+awswrangler = "*"
+python-dotenv = "*"
 
 [dev-packages]
 ipykernel = "*"
