changes to embed_and_ingest module

--- a/Pipfile
+++ b/Pipfile
@@ -8,12 +8,14 @@ textwrap3 = "*"
 streamlit = "*"
 pandas = "*"
 chromadb = "*"
-scikit-learn = "*"
 matplotlib = "*"
 awswrangler = "*"
 python-dotenv = "*"
 instructorembedding = "*"
 sentence-transformers = "*"
+scikit-learn = "*"
+langchain = "*"
+tiktoken = "*"
 
 [dev-packages]
 ipykernel = "*"
