updated parse_and_uploda.py to handle parsing to timestamped data

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-# LOCAL_MODE = true
+LOCAL_MODE = true
+PARSE_MODE = 'timestamps' # timestamps or default
+INGEST_MODE = 'timestamps' # timestamps or default
 
 # AWS variables
 REGION = 'eu-central-1'
