--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ gitdb==4.0.11
 GitPython==3.1.40
 google-auth==2.23.4
 googleapis-common-protos==1.61.0
-greenlet==3.0.0
+greenlet==3.0.1
 grpcio==1.59.2
 h11==0.14.0
 httptools==0.6.1
@@ -64,7 +64,8 @@ jupyter_client==8.4.0
 jupyter_core==5.4.0
 kiwisolver==1.4.5
 kubernetes==28.1.0
-langsmith==0.0.47
+langchain==0.0.330
+langsmith==0.0.57
 llvmlite==0.41.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -124,7 +125,7 @@ regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
 rich==13.6.0
-rpds-py==0.10.6
+rpds-py==0.12.0
 rsa==4.9
 s3transfer==0.7.0
 safetensors==0.4.0
@@ -135,7 +136,7 @@ sentencepiece==0.1.99
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
-SQLAlchemy==2.0.22
+SQLAlchemy==2.0.23
 stack-data==0.6.3
 starlette==0.27.0
 streamlit==1.28.1
@@ -143,6 +144,7 @@ sympy==1.12
 tenacity==8.2.3
 textwrap3==0.9.2
 threadpoolctl==3.2.0
+tiktoken==0.5.1
 tokenizers==0.14.1
 toml==0.10.2
 toolz==0.12.0
