--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-LOCAL_MODE = true
-PARSE_MODE = 'timestamps' # timestamps or default
-INGEST_MODE = 'timestamps' # timestamps or default
+# LOCAL_MODE = true
+PARSE_MODE='timestamps'
+INGEST_MODE='timestamps'
+INGEST_FILE_COUNT=1
 
 # AWS variables
-REGION = 'eu-central-1'
-S3_BUCKET = 'sumar-ai'
-AWS_PROFILE = 'my-admin-profile'
-CHROMA_SERVER_IP = '3.73.101.217'
+REGION='eu-central-1'
+S3_BUCKET='sumar-ai'
+AWS_PROFILE='my-admin-profile'
+CHROMA_SERVER_IP='3.73.101.217'
