ui changes and "get next 3 options"

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,8 @@ langchain = "*"
 tiktoken = "*"
 openai = "==0.28"
 google-trans-new = "*"
+google-translate = "*"
+deep-translator = "*"
 
 [dev-packages]
 ipykernel = "*"
